Fix compiler warning on noreturn function https://bugs.webkit.org/show_bug.cgi?id=137558

Patch by Adrien Destugues <pulkomandy@gmail.com> on 2014-10-09
Reviewed by Darin Adler.

The function is marked "noreturn", but the stub implementation does
return. No new tests: function is never called. Only fixes a warning.

* heap/HeapStatistics.cpp:
(JSC::HeapStatistics::exitWithFailure):

Canonical link: https://commits.webkit.org/155391@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@174509 268f45cc-cd09-0410-ab3c-d52691b4dbfc